--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RAQUEL_GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
-          SETTING_JSON: "sample-settings/rainbow.json"
+          SETTING_JSON: '{"type": "rainbow","fileName": "profile-custom-rainbow.svg","backgroundColor": "#00000f","foregroundColor": "#eeeeff","strongColor": "rgb(255,200,55)","weakColor": "#aaaaaa","radarColor": "rgb(255,200,55)","growingAnimation": true,"saturation": "50%","contribLightness": ["20%","30%","35%","40%","50%"],"duration": "10s","hueRatio": -7}'
       - name: Commit & Push
         run: |
           git config user.name github-actions
